--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <div class="class-item">
                         <div class="class-time">10:00-12:00</div>
                         <div class="class-name">PRAKTIKUM TEKNOLOGI FARMASI CAIR</div>
-                        <div class="class-location">D3101-D3103</div>
+                        <div class="class-location">D3101</div>
                         <div class="class-lecturers">Rennat, Najma</div>
                     </div>
                     <div class="class-item">
