--- a/index.html
+++ b/index.html
@@ -251,6 +251,13 @@
                         <div class="class-location">D3101</div>
                         <div class="class-lecturers">Dina, Viva, Zainnal</div>
                     </div>
+                    <div class="class-item">
+                        <div class="class-time">13:00-14:40</div>
+                        <div class="class-name">PARASITOLOGI</div>
+                        <div class="class-location">D3101</div>
+                        <div class="class-lecturers">Syafrina, Vitri, Tiara</div>
+                    </div>
+
                 </div>
             </div>
 
