--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <body>
     <div class="schedule-container">
         <div class="header">
-            <h1>📚 JADWAL KULIAH - NINDY</h1>
+            <h1>📚 JADWAL KULIAH - NINDY ❤️</h1>
             <p>⌚ Senin - Jumat | 07:00 - 16:00 WIB</p>
         </div>
         
