--- a/index.html
+++ b/index.html
@@ -197,7 +197,16 @@
     </style>
 </head>
 <body>
-    <div class="schedule-container">
+
+
+<div id="popup" class="popup-overlay">
+        <div class="popup-content">
+            <div class="popup-message"> GoodNight nindy ❤️ </div>
+            <button class="popup-button" onclick="closePopup()">iloveyou</button>
+        </div>
+</div>
+
+        <div class="schedule-container">
         <div class="header">
             <h1>📚 JADWAL KULIAH - NINDY ❤️</h1>
             <p>⌚ Senin - Jumat | 07:00 - 16:00 WIB</p>
