--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <!-- Popup -->
     <div id="popup" class="popup-overlay">
         <div class="popup-content">
-            <div class="popup-message">Nindyy </div>
+            <div class="popup-message">Semangat buat hari inii ❤️</div>
             <button class="popup-button" onclick="closePopup()">iloveyou</button>
         </div>
     </div>
