--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
     <!-- Popup -->
     <div id="popup" class="popup-overlay">
         <div class="popup-content">
-            <div class="popup-message">Semangat buat hari inii</div>
+            <div class="popup-message">Semangat yaa..</div>
+            <div class="popup-message">buat hari ini</div>
             <div class="popup-message">sayangg ❤️❤️❤️</div>
             <button class="popup-button" onclick="closePopup()">iloveyou</button>
         </div>
