--- a/index.html
+++ b/index.html
@@ -283,8 +283,10 @@
     <!-- Popup -->
     <div id="popup" class="popup-overlay">
         <div class="popup-content">
-            <div class="popup-message">Semangat yaa..</div>
-        
+            <div class="popup-message">jangan lupa</div>
+            <div class="popup-message">bersih2 yaa</div>
+            <div class="popup-message">cantik kuu ❤️</div>
+
             <button class="popup-button" onclick="closePopup()">iloveyou</button>
         </div>
     </div>
