--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
     <!-- Popup -->
     <div id="popup" class="popup-overlay">
         <div class="popup-content">
-            <div class="popup-message">jangan lupa</div>
-            <div class="popup-message">bersih2 yaa</div>
-            <div class="popup-message">cantik kuu ❤️</div>
+            <div class="popup-message">semangat 💚</div>
+            <div class="popup-message">sayangkuu💛</div>
+            <div class="popup-message">cantikkuu❤️</div>
 
             <button class="popup-button" onclick="closePopup()">iloveyou</button>
         </div>
